--- a/config/settings.yml
+++ b/config/settings.yml
@@ -3,7 +3,7 @@ plugins:
     default: true
     client: true
   sparkloc_backend_url:
-    default: "http://172.17.0.1:8995"
+    default: "https://auth.sparkloc.com"
     client: false
   sparkloc_internal_api_key:
     default: ""
